--- a/package.json
+++ b/package.json
@@ -2,10 +2,10 @@
   "name": "goit-js-hw-11",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "homepage": "https://lysak-Anna.github.io/goit-js-hw-11/",
   "scripts": {
     "start": "parcel src/index.html",
-    "build": "parcel build src/index.html"
+    "build": "parcel build src/index.html --public-url /goit-js-hw-11/"
   },
   "repository": {
     "type": "git",
@@ -17,7 +17,7 @@
   "bugs": {
     "url": "https://github.com/Lysak-Anna/goit-js-hw-11/issues"
   },
-  "homepage": "https://github.com/Lysak-Anna/goit-js-hw-11#readme",
+  
   "devDependencies": {
     "buffer": "^5.7.1",
     "parcel": "^2.8.0",
@@ -25,6 +25,10 @@
   },
   "dependencies": {
     "axios": "^1.1.3",
-    "notiflix": "^3.2.5"
+    "imagesloaded": "^5.0.0",
+    "infinite-scroll": "^4.0.1",
+    "lodash.throttle": "^4.1.1",
+    "notiflix": "^3.2.5",
+    "simplelightbox": "^2.10.4"
   }
 }
